<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="url"
            type="String" />

        <variable
            name="sid"
            type="String" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryBackground"
        android:padding="16dp">

        <EditText
            android:id="@+id/sid_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_sid_hint"
            android:text="@{sid}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sid_example_label"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sid_input" />

        <EditText
            android:id="@+id/server_url_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_url_hint"
            android:text="@{url}"
            app:layout_constraintTop_toBottomOf="@+id/sid_label" />

        <TextView
            android:id="@+id/url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_url_example_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/server_url_id" />

        <Button
            android:id="@+id/settings_ok_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>